    (Daryn Sharp via Colin P. McCabe)

    HDFS-9273. ACLs on root directory may be lost after NN restart.
    (Xiao Chen via cnauroth)

    HDFS-9142. Separating Configuration object for namenode(s) in
    MiniDFSCluster. (Siqi Li via mingma)

    HDFS-9343. Empty caller context considered invalid. (Mingliang Liu via
    Arpit Agarwal)

Release 2.7.2

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    HDFS-8863. The remaining space check in BlockPlacementPolicyDefault is
    flawed. (Kihwal Lee via Yi Liu)

    HDFS-8995. Flaw in registration bookeeping can make DN die on
    reconnect. (Kihwal Lee via yliu)

    HDFS-6945. BlockManager should remove a block from excessReplicateMap
    and decrement ExcessBlocks metric when the block is removed.  (aajisaka)

    HDFS-9178. Slow datanode I/O can cause a wrong node to be marked
    bad. (Kihwal Lee)

    HDFS-8722. Optimize datanode writes for small writes and flushes.
    (Kihwal Lee)

    HDFS-9220. Reading small file (< 512 bytes) that is open for
    append fails due to incorrect checksum. (Jing Zhao via Kihwal Lee)

    HDFS-9305. Delayed heartbeat processing causes rapid storm of
    subsequent heartbeat messages (Arpit Agarwal)

    HDFS-9106. Transfer failure during pipeline recovery causes permanent
    write failures. (Kihwal Lee)

    HDFS-8950. NameNode refresh doesn't remove DataNodes that are no longer
    in the allowed list. (Daniel Templeton via cmccabe).

    HDFS-9083. Replication violates block placement policy (Rushabh Shah)

Release 2.7.1

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-7931. DistributedFileSystem should not look for keyProvider in
    cache if Encryption is disabled (asuresh)

  BUG FIXES

    HDFS-8595. TestCommitBlockSynchronization fails with NPE. (Arpit agarwal)

    HDFS-8576. Lease recovery should return true if the lease can be released
    and the file can be closed. (J.Andreina via szetszwo)
